--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "vite-template",
+  "homepage": "https://aklivets95.github.io/vite-template/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "nmp run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "sass": "^1.89.2",
     "vite": "^7.0.0"
+  },
+  "dependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
